# Self-Healing-Enterprise-AI-System

./: LICENSE  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt
agents/: answer_agent.py  critic_agent.py  policy_agent.py  root_cause_agent.py
data/: hr_policy.txt  incidents.txt  payments_api.md  security_policy.txt
evals/: groundedness.py  regression.py
healing/: prompt_repair.py  self_heal.py
ingestion/: fingerprint.py  ingest.py
monitoring/: audit_log.py  metrics.py
rag/: retriever.py  vectorstore.py
tests/: inject_failures.py
vectorstore/: index.faiss  index.pkl  meta.json
